--- a/index.html
+++ b/index.html
@@ -73,6 +73,6 @@
         </div>
       </div>
     </main>
-    <script src="script.js"></script>
+    <script type="module" src="script.js"></script>
   </body>
 </html>
